@@ -1,3 +1,11 @@
+2005-01-10  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+
+        * kwq/KWQTextUtilities.mm:
+        (currentTextBreakLocaleID):
+        Return empty string (AKA root locale) if locale pref can not be canonicalized.
+
 2005-01-10  John Sullivan  <sullivan@apple.com>
 
         Fixed broken Panther build.
